@@ -178,11 +178,13 @@ describe AccountsController do
     it "should destroy the requested account" do
       Account.should_receive(:find).with("37").and_return(mock_account)
       mock_account.should_receive(:destroy)
+      mock_account.should_receive(:name).and_return("Joe Spec")
       delete :destroy, :id => "37"
     end
   
     it "should redirect to the accounts list" do
       Account.stub!(:find).and_return(mock_account(:destroy => true))
+      mock_account.should_receive(:name).and_return("Joe Spec")
       delete :destroy, :id => "1"
       response.should redirect_to(accounts_url)
     end
