@@ -164,11 +164,13 @@ describe LeadsController do
     it "should destroy the requested lead" do
       Lead.should_receive(:find).with("37").and_return(mock_lead)
       mock_lead.should_receive(:destroy)
+      mock_lead.should_receive(:full_name).and_return("Joe Spec")
       delete :destroy, :id => "37"
     end
   
     it "should redirect to the leads list" do
       Lead.stub!(:find).and_return(mock_lead(:destroy => true))
+      mock_lead.should_receive(:full_name).and_return("Joe Spec")
       delete :destroy, :id => "1"
       response.should redirect_to(leads_url)
     end
