@@ -8,6 +8,8 @@ describe "/campaigns/index.html.erb" do
       stub_model(Campaign, :status => "Planned"),
       stub_model(Campaign, :status => "Started")
     ]
+    Setting.stub!(:campaign_status_color).and_return({ :key => "value" })
+    Setting.stub!(:campaign_status).and_return({ :key => "value" })
   end
 
   it "should render list of campaigns" do
